@@ -32,6 +32,9 @@
 /*@access StringBuf @*/	/* compared with NULL */
 /*@access CSA_t @*/
 
+extern int _nolead;	/* disable writing lead. */
+extern int _nosigh;	/* disable writing signature header. */
+
 /**
  */
 static inline int genSourceRpmName(Spec spec)
@@ -632,40 +635,6 @@ int writeRPM(Header *hdrp, unsigned char ** pkgidp, const char *fileName,
     if (rc)
 	goto exit;
 
-#ifdef	DYING
-    /*
-     * Set the actual archive size, and rewrite the header.
-     * This used to be done using headerModifyEntry(), but now that headers
-     * have regions, the value is scribbled directly into the header data
-     * area. Some new scheme for adding the final archive size will have
-     * to be devised if headerGetEntryMinMemory() ever changes to return
-     * a pointer to memory not in the region, probably by appending
-     * the archive size to the header region rather than including the
-     * archive size within the header region.
-     */
-    if (Fileno(csa->cpioFdIn) < 0) {
-	HGE_t hge = (HGE_t)headerGetEntryMinMemory;
-	int_32 * archiveSize;
-	if (hge(h, RPMTAG_ARCHIVESIZE, NULL, (void *)&archiveSize, NULL))
-	    *archiveSize = csa->cpioArchiveSize;
-    }
-
-    (void) Fflush(fd);
-    if (Fseek(fd, 0, SEEK_SET) == -1) {
-	rc = RPMERR_FSEEK;
-	rpmError(RPMERR_FSEEK, _("%s: Fseek failed: %s\n"),
-			sigtarget, Fstrerror(fd));
-    }
-
-    fdInitDigest(fd, PGPHASHALGO_SHA1, 0);
-    if (headerWrite(fd, h)) {
-	rc = RPMERR_NOSPACE;
-	rpmError(RPMERR_NOSPACE, _("Unable to write final header\n"));
-    }
-    (void) Fflush(fd);
-    fdFiniDigest(fd, PGPHASHALGO_SHA1, (void **)&SHA1, NULL, 1);
-#endif
-
     (void) Fclose(fd);
     fd = NULL;
     (void) Unlink(fileName);
@@ -712,6 +681,7 @@ int writeRPM(Header *hdrp, unsigned char ** pkgidp, const char *fileName,
     }
 
     /* Write the lead section into the package. */
+if (!_nolead)
     {	int archnum = -1;
 	int osnum = -1;
 	struct rpmlead lead;
@@ -748,9 +718,12 @@ int writeRPM(Header *hdrp, unsigned char ** pkgidp, const char *fileName,
     }
 
     /* Write the signature section into the package. */
-    rc = rpmWriteSignature(fd, sig);
-    if (rc)
-	goto exit;
+if (!_nosigh)
+    {
+	rc = rpmWriteSignature(fd, sig);
+	if (rc)
+	    goto exit;
+    }
 
     /* Append the header and archive */
     ifd = Fopen(sigtarget, "r.fdio");
